[package]
name = "darwinia-builder"
version = "0.6.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
clap = "*"
dirs = "*"
indicatif = "*"
lazy_static = "*"
reqwest = "*"