[package]
name = "darwinia-builder"
version = "0.7.3"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
clap = "*"
dirs = "*"
fs_extra = "*"
indicatif = "*"
lazy_static = "*"
reqwest = "*"
os_info = "*"
toml = "*"